<?xml version="1.0"?>
<package>
  <name>graph_planner</name>
  <version>0.0.0</version>
  <description>The 2D_graph_planner package</description>

  <maintainer email="d.d.tananaev@gmail.com">Denis Tananaev</maintainer>

  <license>BSD</license>

  <author email="d.d.tananaev@gmail.com">Denis Tananaev</author>
  <author email="v.d.tananaev@gmail.com">Vladislav Tananaev</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>interactive_markers</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>


  <export>

  </export>
</package>
